[gd_scene load_steps=8 format=3 uid="uid://cp11m87rr6eq0"]

[ext_resource type="Script" path="res://overworld_4.gd" id="1_tujme"]
[ext_resource type="Texture2D" uid="uid://dmxqn7ipbraw5" path="res://image (1).png" id="2_c078n"]
[ext_resource type="Texture2D" uid="uid://bbtr8ai31fia4" path="res://assets/elevator.png" id="3_qmjap"]
[ext_resource type="Texture2D" uid="uid://d3e5hjq3v36rx" path="res://assets/bad.png" id="4_pmc3y"]
[ext_resource type="PackedScene" uid="uid://dxn7a40jr2idf" path="res://character_body_2d.tscn" id="5_q4dck"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oflij"]
radius = 104.13

[sub_resource type="CircleShape2D" id="CircleShape2D_11bs0"]
radius = 273.98

[node name="overworld4" type="Node2D"]
script = ExtResource("1_tujme")

[node name="Image(1)2" type="Sprite2D" parent="."]
position = Vector2(870, 326)
scale = Vector2(1.24767, 1.24767)
texture = ExtResource("2_c078n")

[node name="Elevator" type="Sprite2D" parent="."]
position = Vector2(1492, 332)
scale = Vector2(2.52985, 2.52985)
texture = ExtResource("3_qmjap")

[node name="Bad" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.54902)
position = Vector2(310, 102)
scale = Vector2(0.164117, 0.164117)
texture = ExtResource("4_pmc3y")

[node name="Ghost" parent="." instance=ExtResource("5_q4dck")]
position = Vector2(1429, 340)

[node name="Camera2D" type="Camera2D" parent="Ghost"]
limit_left = 0
limit_top = 0
limit_right = 1785
limit_bottom = 650
metadata/_edit_lock_ = true

[node name="textNode" type="Button" parent="Ghost"]
auto_translate_mode = 1
visible = false
offset_left = -127.0
offset_top = -182.0
offset_right = 114.0
offset_bottom = -105.0
text = "I don't need to use that yet, 
there's more meritocracy
to spread  here >:)"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ghost"]
shape = SubResource("CircleShape2D_oflij")

[node name="play" type="Button" parent="."]
auto_translate_mode = 1
offset_left = 409.0
offset_top = 33.0
offset_right = 591.0
offset_bottom = 179.0
button_mask = 0
text = "Jordan - Sales

Daydreaming on the job? I don't think so! 


"
autowrap_mode = 2

[node name="PlayButton" type="Button" parent="play"]
auto_translate_mode = 1
modulate = Color(0.339368, 0.587909, 1, 1)
self_modulate = Color(0.28814, 0.64651, 1, 1)
layout_mode = 0
offset_left = -1.0
offset_top = 105.0
offset_right = 181.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 21
text = "Enter Mind"

[node name="jordan_done" type="Button" parent="."]
auto_translate_mode = 1
visible = false
offset_left = 419.0
offset_top = 32.0
offset_right = 584.0
offset_bottom = 180.0
button_mask = 0
text = "Much better. "
autowrap_mode = 2

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(313, 130)

[node name="Player Detection" type="Area2D" parent="Marker2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/Player Detection"]
shape = SubResource("CircleShape2D_11bs0")

[connection signal="pressed" from="play/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="body_entered" from="Marker2D/Player Detection" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Marker2D/Player Detection" to="." method="_on_area_2d_body_exited"]
